# Aria

./: .gitignore  acknowledgement.md  readme.md  stages.md
Active-v2/: glsl.d.ts  (+4 more)
Anthem/: .gitignore  CMakeLists.txt  a.txt  acknowledgements.md  compile.py  compile_shader.cmd  compile_shader.py  compile_shader.sh  main.cpp  readme.md  run.sh
Anthem/assets/: radixresultcuda.txt
Anthem/demo/: AC1_HelloWorldToCpp.cpp  AC2_Usability.cpp  AC3_FunctionAndReferences.cpp  AC3_Runtime.cpp  AC4_IteratorsAndTemplates.cpp  AC5_Concurrency.cpp  AD0_HelloWorld.cpp  AD10_ComputeShader.cpp  AD11_Instancing.cpp  AD12_CubicTexture.cpp  AD12_Texture3D.cpp  AD13_IndirectDraw.cpp  AD14_ComputeRayTracing.cpp  AD15_ComputeCloth.cpp  AD16_TrianglesHLSL.cpp  AD17_Tessellation.cpp  AD18_OrderIndependentTransparency.cpp  AD19_MeshShader.cpp  AD1_Triangles.cpp  AD20_CubeMap.cpp  AD21_OmnidirectionalShadowMapping.cpp  AD22_RayTracingPipeline.cpp  AD23_CallableShader.cpp  AD24_RayTracingModelDisplay.cpp  AD25A_MonteCarloPathTracer.cpp  AD25B_CornellBox.cpp  AD25_MonteCarloPathTracer.cpp  AD26A_StencilBuffer.cpp  AD26B_FastApproximateAntiAliasing.cpp  AD26_StencilBuffer.cpp  AD27A_FastApproximateAntiAliasing.cpp  AD27B_TemporalAntiAliasing.cpp  AD27C_MorphologicalAntiAliasing.cpp  AD28_ComputeVolumetricFog.cpp  AD28_VolumetricFog.cpp  AD29_AreaLight.cpp  AD2_ModelDisplay.cpp  AD2_PresentModel.cpp  AD30_SineWaves.cpp  AD31A_BackfacingToonShader.cpp  (+19 more)
Anthem/enc_temp_folder/c7bc274578b32a56e26b08e23927139/: AnthemSwapChain.cpp
Anthem/extlicense/: ext.licenses
Anthem/include/: ref.cpp
Anthem/include/components/base/: AnthemComponentBase.h  AnthemComponentsBaseImports.h  AnthemScene.h
Anthem/include/components/camera/: AnthemCamera.h  AnthemOrbitControl.h
Anthem/include/components/geometry/: AnthemBaseGeometry.h
Anthem/include/components/math/: AnthemLowDiscrepancySequence.h  AnthemNoise.h
Anthem/include/components/passhelper/: AnthemComputePassHelper.h  AnthemDualSeqCommand.h  AnthemExecutionType.h  AnthemPassHelper.h  AnthemSequentialCommand.h
Anthem/include/components/performance/: AnthemFrameRateMeter.h
Anthem/include/components/postprocessing/: AnthemBloom.h  AnthemFXAA.h  AnthemGlobalFog.h  AnthemMLAABlend.h  AnthemMLAAEdge.h  AnthemMLAAMix.h  AnthemPostIdentity.h  AnthemPostprocessPass.h  AnthemSimpleBlur.h  AnthemTAA.h
Anthem/include/components/utility/: AnthemSimpleModelIntegrator.h
Anthem/include/core/: AnthemDefs.h  AnthemEnv.h  AnthemEnvImpl.h  AnthemLogger.h  AnthemLogicalDeviceSelector.h  AnthemPhyDeviceSelector.h  AnthemSwapChain.h  AnthemValLayer.h  AnthemWindowSurface.h
Anthem/include/core/base/: AnthemBaseImports.h  AnthemConfig.h  AnthemDefs.h  AnthemEnv.h  AnthemEnvImpl.h  AnthemInstance.h  AnthemLogger.h  AnthemLogicalDevice.h  AnthemLogicalDeviceSelector.h  AnthemPhyDevice.h  AnthemPhyDeviceSelector.h  AnthemSwapChain.h  AnthemValLayer.h  AnthemWindowSurface.h
Anthem/include/core/drawing/: AnthemCommandBuffers.h  AnthemCommandManager.h  AnthemDepthBuffer.h  AnthemDescriptorPool.h  AnthemDescriptorPoolReqBase.h  AnthemDrawingCommandHelper.h  AnthemFramebuffer.h  AnthemFramebufferList.h  AnthemGeneralBufferBase.h  AnthemImage.h  AnthemIndexBuffer.h  AnthemMainLoopSyncer.h  AnthemSwapchainFramebuffer.h  AnthemUniformBuffer.h  AnthemVertexBuffer.h  AnthemVertexStageBuffer.h
Anthem/include/core/math/: AnthemLinAlg.h  AnthemMathAbbrs.h  AnthemMatrix.h  AnthemQuaternion.h  AnthemVector.h
Anthem/include/core/pipeline/: AnthemComputePipeline.h  AnthemDescriptorSetEntry.h  AnthemGraphicsPipeline.h  AnthemPipelineBase.h  AnthemRenderPass.h  AnthemShaderModule.h  AnthemShaderModuleBase.h  AnthemViewport.h
Anthem/include/core/renderer/: AnthemSimpleToyRenderer.h
Anthem/include/core/tools/: AnthemDirtyFlag.h
Anthem/include/core/utils/: AnthemUtlAppConfigReqBase.h  AnthemUtlCommandBufferReqBase.h  AnthemUtlFileReaderBase.h  AnthemUtlLogicalDeviceReqBase.h  AnthemUtlPhyDeviceReqBase.h  AnthemUtlSimpleModelStruct.h  AnthemUtlSwapChainReqBase.h  AnthemUtlTimeOps.h
Anthem/include/entry/: AnthemEnvImpl.h
Anthem/shader/default/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
Anthem/shader/defaultDefer/: shader.frag  shader.vert
Anthem/shader/deferCompositionPbr/: shader.vert
Anthem/shader/glsl/angleReproj/: shader.axis.vert  shader.comp  shader.frag  shader.text.frag  shader.text.vert  shader.vert
Anthem/shader/glsl/compcl/: compcl.comp  compcl.frag  compcl.vert
Anthem/shader/glsl/comprt/: comprt.comp  comprt.frag  comprt.vert
Anthem/shader/glsl/computeShaderCompStage/: shader.comp
Anthem/shader/glsl/computeShaderDrawStage/: shader.vert
Anthem/shader/glsl/default/: shader.frag
Anthem/shader/glsl/deferCompositionPbr/: shader.frag
Anthem/shader/identity/: shader.frag
Anthem/shader/ssaoComposition/: shader.frag
Anthem/shader/ssaoDefer/: shader.frag
Anthem/src/core/: AnthemConfig.cpp  AnthemEnvImpl.cpp  AnthemLogger.cpp  AnthemLogicalDevice.cpp  AnthemLogicalDeviceSelector.cpp  AnthemPhyDevice.cpp  AnthemPhyDeviceSelector.cpp  AnthemSwapChain.cpp  AnthemValLayer.cpp  AnthemWindowSurface.cpp
Anthem/src/entry/: AnthemEnvImpl.cpp
CppTestbed/: CMakeLists.txt
(+754 files in other folders)
